--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
@@ -18,5 +20,134 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+main {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+aside {
+    width: 30%;
+}
+
+
+aside.hidden {
+    display: none;
+}
+
+.todolist-container {
+    min-width: 70%;
+    width: 100%;
+}
+
+.add-subcategories,
+.remove-category {
+    padding: 8px;
+    margin: 0 0 0 10px;
+}
+
+.category-item div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.subcategory-container {
+    padding-left: 20px;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    padding: 5px 0;
+}
+
+ul,
+li {
+    list-style: none;
+}
+
+header,
+footer,
+aside,
+.todolist-container {
+    border: 1px solid #000;
+    padding: 10px;
+}
+
+.active-li > .category-container {
+    color: green;
+}
+
+body {
+    background: lightblue;
+}
+
+button {
+    border: 1px solid #000;
+    background: lightyellow;
+    color: #000;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+button:hover,
+button:focus {
+    outline: none;
+}
+
+footer {
+    padding: 20px 0;
+    border-bottom: 2px solid #000;
+}
+
+body main {
+    display: flex;
+}
+
+.calendar-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.task-item {
+    border: 2px solid #000;
+    display: block;
+    clear: both;
+}
+
+.DOD-line {
+    color: green;
+}
+
+.todolist-inner-container {
+    margin: 20px 0;
+}
+
+.todolist-inner-container li {
+    margin-bottom: 10px;
+}
+
+.uppercase-text {
+    text-transform: uppercase;
+}
+
+.expired {
+    color: red;
 }
