--- a/src/App.css
+++ b/src/App.css
@@ -1,153 +1,143 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-main {
+html {
+    background: rgba(0, 0, 0, 0.4);
     display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-}
-
-aside {
-    width: 30%;
-}
-
-
-aside.hidden {
-    display: none;
-}
-
-.todolist-container {
-    min-width: 70%;
-    width: 100%;
-}
-
-.add-subcategories,
-.remove-category {
-    padding: 8px;
-    margin: 0 0 0 10px;
-}
-
-.category-item div {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-.subcategory-container {
-    padding-left: 20px;
+* {
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    color: #fff;
 }
 
-ul {
-    padding: 0;
-}
-
-li {
-    padding: 5px 0;
+.current-date-row h3 {
+    text-transform: uppercase;
+    font-size: 37px;
+    font-weight: 900;
+    margin: 0 0 1rem;
 }
 
 ul,
 li {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-header,
-footer,
-aside,
-.todolist-container {
-    border: 1px solid #000;
-    padding: 10px;
+.calendar-wrapper {
+    background: #1D252C;
+    color: #fff;
+    padding: 40px 60px;
+    text-align: center;
 }
 
-.active-li > .category-container {
-    color: green;
+.current-date span {
+    font-family: inherit;
+    font-weight: 700;
+    color: inherit;
+    display: inline-block;
+    margin-left: .5ch;
+    padding: 0;
+    font-size: 16px;
 }
 
-body {
-    background: lightblue;
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 30px 0;
 }
 
-button {
-    border: 1px solid #000;
-    background: lightyellow;
-    color: #000;
-    padding: 10px 15px;
+.week-inner-component  ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.year-root-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 307.875px;
+    min-width: 307.875px;
+    max-width: 307.875px;
+}
+
+.week-inner-component  ul li {
+    flex-basis: 14.28%;
+}
+
+.year-root-container li {
+    flex-basis: 14.2857143%;
+    width: 14.2857143%;
+    height: 39px;
+    line-height: 39px;
+    margin: 0;
+    display: inline-block;
+    position: relative;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 150px;
+    max-width: 39px;
     cursor: pointer;
 }
 
-button:hover,
-button:focus {
-    outline: none;
+.year-root-container .current:hover,
+.year-root-container .current:focus {
+    color: #3DAE2B;
 }
 
-footer {
-    padding: 20px 0;
-    border-bottom: 2px solid #000;
+.year-root-container .previous,
+.year-root-container .next {
+    background: none;
+    color: rgba(207, 210, 211, 0.1);
+    visibility: visible;
 }
 
-body main {
-    display: flex;
+.year-root-container .previous:hover,
+.year-root-container .next:hover,
+.year-root-container .previous:focus,
+.year-root-container .next:focus {
+    color: #fff;
 }
 
-.calendar-container {
-    display: flex;
-    justify-content: space-between;
+.year-root-container .active-day {
+    background: #fff;
+    border: 0;
+    color: #1D252C;
+    font-weight: 500;
+    transition: color .1s, background .1s;
 }
 
-.task-item {
-    border: 2px solid #000;
-    display: block;
-    clear: both;
+.year-root-container .active-day:hover,
+.year-root-container .active-day:focus {
+    background: #3DAE2B;
+    color: #fff;
 }
 
-.DOD-line {
-    color: green;
+svg {
+    height: 30px;
+    width: 30px;
 }
 
-.todolist-inner-container {
-    margin: 20px 0;
+svg path {
+    fill: #3DAE2B;
 }
 
-.todolist-inner-container li {
-    margin-bottom: 10px;
+.arrow:hover svg path,
+.arrow:focus svg path {
+    fill: #2cfd0a;
 }
 
-.uppercase-text {
-    text-transform: uppercase;
-}
-
-.expired {
-    color: red;
+.arrow {
+    display: inline-block;
+    cursor: pointer;
 }
